--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  width: 90%;
+  margin: 3rem auto;
+
+}
+
+.container{
+  width: 50%;
+  margin: auto;
+
+}
+h1{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#form{
   display: flex;
   flex-direction: column;
+  margin-top: 1em;
+}
+
+input{
+  width: 100%;
+  padding: 0.4em;
+  margin: 0.5em 0;
+
+}
+
+#table{
+  margin-top: 1em;
+  width: 100%;
+
+
+}
+
+thead{
+  background-color: aqua;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+td{
+  width: 220px;
+  padding: 0.5em;
+}
+
+.delete{
+  color: red;
+  cursor: pointer;
+}
+.nav{
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  background-color: #000;
+  width: 100vw ;
+  color: #ffffff;
+  margin: -3rem 0 0 -4.3rem ;
+}
+.nav h1{
+  color: aqua;
+}
+ul{
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+li{
+  font-size: 18px;
+  margin: 0 1rem;
+  text-transform: uppercase;
+}
+li:hover{
+  opacity: 0.7;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
